# MacPilot

./: .env.example  Makefile  README.MD  requirements.txt  temp_metadata.txt
automation_framework/: .coverage  __main__.py  main.py  pyproject.toml  pytest.ini
automation_framework/.ropeproject/: autoimport.db
automation_framework/actors/: base.py
automation_framework/actors/chrome/: browser.py
automation_framework/actors/finder/: filesystem.py
automation_framework/actors/generic/: mouse_keyboard.py
automation_framework/automation_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
automation_framework/config/: automation.yml  prompts.yml
automation_framework/core/: __init__.py  config.py  context.py
automation_framework/core/metaclasses/: actor_meta.py
automation_framework/core/patterns/: __init__.py
automation_framework/examples/: orchestration_example.py
automation_framework/models/: __init__.py  base.py  db_session.py  pydantic_models.py
automation_framework/services/ai/: openai_service.py
automation_framework/services/automation/: coordinator.py  manager.py
automation_framework/services/execution/: engine.py
automation_framework/services/instruction/: processor.py
automation_framework/services/macos_ui_service/: __init__.py  macos_ui_service.py
automation_framework/services/orchestration/: orchestrator.py
automation_framework/services/patterns/: interaction_patterns.py  pattern_registry.py
automation_framework/tests/: conftest.py  test_main.py
automation_framework/utils/: decorators.py  testing.py
(+20 files in other folders)
